--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -3,5 +3,8 @@
   object-fit: contain;
 }
 
-@media screen and (max-width) {
+@media screen and (max-width: 320px) {
+  .header__logo {
+    max-width: 104px;
+  }
 }
