--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -8,4 +8,17 @@
   line-height: 48px;
   /* or 114% */
   color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 320px) {
+  .profile__title {
+    margin: 0 10px 14px auto;
+    max-width: 189px;
+    font-size: 27px;
+    line-height: 33px;
+    text-align: center;
+  }
 }
