--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,9 +1,20 @@
 .footer {
   margin: 0;
   margin-left: 200px;
+  margin-bottom: 60px;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   color: #545454;
+}
+
+@media screen and (max-width: 1279px) {
+  .footer {
+    max-width: 282px;
+    margin-left: 19px;
+    margin-bottom: 36px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
