--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,6 +1,6 @@
 .header {
   margin: 45px auto 40px auto;
-  max-width: 69%;
+  max-width: 880px;
 }
 
 header::after {
@@ -13,11 +13,17 @@ header::after {
   padding-top: 41px;
 }
 
-@media screen and (max-width: ) {
+
+
+@media screen and (max-width: 320px) {
   .header {
-    max-width: 320px;
-    margin: 28px 0 42px 0;
+    max-width: 100%;
+    margin: 0;
+    margin-top: 28px;
     padding-left: 27px;
     padding-bottom: 31.6px;
   }
 }
+
+
+
