--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,7 +1,7 @@
 .profile__add-button {
   border: 2px solid #ffffff;
   border-radius: 2px;
-  width: 150px;
+  min-width: 150px;
   height: 50px;
   background-color: black;
   background: url(../../../images/plus.svg) no-repeat center;
@@ -9,4 +9,11 @@
 
 .profile__add-button:hover {
   opacity: 0.6;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 320px) {
+  .profile__add-button {
+    width: 282px;
+  }
 }
