--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,3 +3,10 @@
   width: 100%;
   border-radius: 50%;
 }
+
+@media screen and (max-width: 320px) {
+  .profile__avatar {
+    margin-bottom: 26px;
+  }
+}
+
