--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -6,4 +6,18 @@
   font-size: 18px;
   line-height: 22px;
   color: #ffffff;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+@media screen and (max-width: 320px) {
+  .profile__subtitle {
+    max-width: 282px;
+    margin-right: auto;
+    margin-left: auto;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+  }
 }
