--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,3 +5,31 @@
   display: flex;
   align-items: center;
 }
+
+@media screen and (min-width: 1171px) and (max-width: 1279px) {
+  .profile {
+    max-width: 75%;
+  }
+}
+
+@media screen and (min-width: 848px) and (max-width: 1170px) {
+  .profile {
+    max-width: 90%;
+  }
+}
+
+@media screen and (max-width: 847px) {
+  .profile {
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile {
+    max-width: 282px;
+    margin: 0 auto 36px auto;
+  }
+}
+
+
