--- a/pages/index.css
+++ b/pages/index.css
@@ -11,6 +11,15 @@
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/popup/popup.css);
+@import url(../blocks/popup/_opened/popup_opened.css);
+@import url(../blocks/popup/__container/popup__container.css);
+@import url(../blocks/popup/__form/popup__form.css);
+@import url(../blocks/close-button/close-button.css);
+@import url(../blocks/popup/__title/popup__title.css);
+@import url(../blocks/popup/__fields/popup__fields.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/elements/elements.css);
 @import url(../blocks/elements/elements-container/elements-container.css);
 @import url(../blocks/element/element.css);
