--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -3,7 +3,7 @@
   border-radius: 2px;
   min-width: 150px;
   height: 50px;
-  background-color: black;
+  background-color: rgba(0,0,0,0.5);
   background: url(../../../images/plus.svg) no-repeat center;
 }
 
