--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -1,5 +1,5 @@
 .profile__edit-button {
-  background: url(../../../images/Edit\ Button.svg) no-repeat center;
+  background: url(../../../images/Edit-Button.svg) no-repeat center;
   border: 1px solid #ffffff;
   width: 24px;
   height: 24px;
