--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -13,12 +13,18 @@
   overflow: hidden;
 }
 
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 976px) {
   .profile__title {
-    margin: 0 10px 14px auto;
-    max-width: 189px;
+    margin: 0;
+    margin-right: 10px;
     font-size: 27px;
     line-height: 33px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .profile__title {
+    max-width: 189px;
     text-align: center;
   }
 }
