--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -13,9 +13,14 @@
   padding-top: 41px;
 }
 
+@media screen and (max-width: 976px) {
+.header {
+  max-width: 90%;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .header {
-    max-width: 100%;
     margin: 0;
     margin-top: 28px;
     padding-left: 27px;
