--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,14 +1,24 @@
 .popup__close-button {
-  background: url(../../images/Close-Icon.svg) no-repeat center;
+  background: url(../../../images/Close-Icon.svg) no-repeat center transparent;
   width: 32px;
   height: 32px;
   border: none;
   position: absolute;
-  top: 155;
-  right: 385;
+  margin: 0;
+  right: -40px;
+  top: -40px;
 }
 
 .popup__close-button:hover {
   cursor: pointer;
   opacity: 0.6;
+}
+
+@media screen and (max-width: 600px) {
+  .popup__close-button {
+    width: 20px;
+    height: 20px;
+    right: 0;
+    top: -36px;
+  }
 }
