--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,4 +1,11 @@
 .popup__container {
   width: 430px;
   margin: auto;
+  position: relative;
+}
+
+@media screen and (max-width: 600px) {
+  .popup__container {
+    width: 282px;
+  }
 }
