--- a/blocks/popup/__fields/popup__fields.css
+++ b/blocks/popup/__fields/popup__fields.css
@@ -6,3 +6,11 @@
   justify-content: space-between;
   max-width: 100%;
 }
+
+@media screen and (max-width: 600px) {
+  .popup__fields {
+    margin: 0 22px 45px 22px;
+  }
+}
+
+
