--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,8 +1,13 @@
 .popup__form {
+
   display: flex;
   flex-direction: column;
   background-color: #ffffff;
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
-  
+}
+
+@media screen and (max-width: 600px) {
+  .popup__form {
+  }
 }
