--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,5 +4,13 @@
   font-size: 24px;
   line-height: 29px;
   color: #000000;
-  margin: 34px 36px 54px 36px;
+  margin: 34px 64px 44px 36px;
+}
+
+@media screen and (max-width: 600px) {
+  .popup__title {
+    font-size: 18px;
+    line-height: 22px;
+    margin: 25px auto 75px auto;
+  }
 }
