--- a/blocks/profile/__card/profile__card.css
+++ b/blocks/profile/__card/profile__card.css
@@ -1,5 +1,5 @@
 .profile__card {
-  max-width: 340px;
+  max-width: 50%;
   margin: 0 244px 0 30px;
   display: flex;
   flex-wrap: wrap;
@@ -7,7 +7,7 @@
   justify-content: flex-start;
 }
 
-@media screen and (max-width: 847px) {
+@media screen and (max-width: 976px) {
   .profile__card {
     max-width: 282px;
     margin: 0 auto;
