--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -11,6 +11,14 @@
   overflow: hidden;
 }
 
+@media screen and (max-width: 976px) {
+  .profile__subtitle {
+    margin-top: 14px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .profile__subtitle {
     max-width: 282px;
