--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,6 +4,7 @@
   padding: 0;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 1171px) and (max-width: 1279px) {
@@ -14,7 +15,7 @@
 
 @media screen and (min-width: 848px) and (max-width: 1170px) {
   .profile {
-    max-width: 90%;
+    max-width: 80%;
   }
 }
 
