--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -23,7 +23,7 @@
   .header {
     margin: 0;
     margin-top: 28px;
-    padding-left: 27px;
+    max-width: 100%;
     padding-bottom: 31.6px;
   }
 }
