--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,11 +1,13 @@
 .popup__container {
   width: 430px;
   margin: auto;
+  top: 50%;
   position: relative;
 }
 
 @media screen and (max-width: 600px) {
   .popup__container {
     width: 282px;
+    max-height: 322px;
   }
 }
