--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,16 +1,12 @@
 .popup {
   position: fixed;
+  display: none;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  visibility: hidden;
 }
-
-
-
 
