--- a/blocks/profile/__card/profile__card.css
+++ b/blocks/profile/__card/profile__card.css
@@ -1,10 +1,18 @@
 .profile__card {
-  max-width: 50%;
+  max-width: 336px;
   margin: 0 244px 0 30px;
+  padding: 0;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: flex-start;
+}
+
+@media screen and (max-width: 1279px) {
+  .profile__card {
+    justify-content: space-between;
+    margin: 0 auto;
+  }
 }
 
 @media screen and (max-width: 976px) {
