--- a/blocks/profile/__title/profile__title.css
+++ b/blocks/profile/__title/profile__title.css
@@ -13,8 +13,15 @@
   overflow: hidden;
 }
 
+@media screen and (max-width: 1100px) {
+  .profile__title {
+    max-width: 250px;
+  }
+}
+
 @media screen and (max-width: 976px) {
   .profile__title {
+    max-width: 189px;
     margin: 0;
     margin-right: 10px;
     font-size: 27px;
@@ -24,7 +31,6 @@
 
 @media screen and (max-width: 320px) {
   .profile__title {
-    max-width: 189px;
     text-align: center;
   }
 }
