--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -16,8 +16,7 @@
 
 @media screen and (max-width: 600px) {
   .popup__close-button {
-    width: 20px;
-    height: 20px;
+    background-size: 20px 20px;
     right: 0;
     top: -36px;
   }
