--- a/blocks/element/__city/element__city.css
+++ b/blocks/element/__city/element__city.css
@@ -1,6 +1,7 @@
 .element__city {
   margin: 0;
   margin-left: 21px;
+  max-width: 190px;
   align-self: flex-start;
   font-weight: 900;
   font-size: 24px;
